adding new files

--- a/pdf_write.ipynb
+++ b/pdf_write.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
     "                            # print(widget.field_value)\n",
     "                            # print('*')\n",
     "                            if field_value.lower() in [\"yes\", \"true\", \"1\"]:\n",
-    "                                widget.field_value = '1'  # Check the checkbox\n",
+    "                                widget.field_value = widget.on_state()  # Check the checkbox\n",
     "                            else:\n",
     "                                widget.field_value = '0'  # Uncheck the checkbox\n",
     "                        # print(widget.field_name, widget.field_value)\n",
@@ -402,7 +402,7 @@
     "    output_path = \"C:/Users/sekhar/Downloads/test2.pdf\"\n",
     "\n",
     "    field_data = {\n",
-    "        \"SUSPECT ADVERSE REACTION REPORT\": \"Adverse Reaction Report by raja sekhar\",\n",
+    "        \"SUSPECT ADVERSE REACTION REPORT\": \"Adverse Reaction Report of Mushroom Solutions\",\n",
     "        \"1a COUNTRY\": 'INDIA',\n",
     "        \"7  13 DESCRIBE REACTIONS including relevant testslab data\": \"Patient experienced severe headache and nausea.\",\n",
     "        \"PatientDied\": \"yes\",\n",
