--- a/pdf_pymupdf.ipynb
+++ b/pdf_pymupdf.ipynb
@@ -281,6 +281,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sekhar\\AppData\\Local\\Temp\\ipykernel_10532\\609354463.py:15: DeprecationWarning: tostring() is deprecated. Use tobytes() instead.\n",
+      "  samples = bytearray(bild.tostring())    # get plain pixel data from numpy array\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Pixmap.__init__() got an unexpected keyword argument 'alpha'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m         bild[i, j] \u001b[38;5;241m=\u001b[39m [(i\u001b[38;5;241m+\u001b[39mj)\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m256\u001b[39m, i\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m256\u001b[39m, j\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m256\u001b[39m]\n\u001b[0;32m     15\u001b[0m samples \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mbytearray\u001b[39m(bild\u001b[38;5;241m.\u001b[39mtostring())    \u001b[38;5;66;03m# get plain pixel data from numpy array\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m pix \u001b[38;5;241m=\u001b[39m \u001b[43mpymupdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPixmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpymupdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcsRGB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwidth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheight\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msamples\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43malpha\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m pix\u001b[38;5;241m.\u001b[39msave(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest.png\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Pixmap.__init__() got an unexpected keyword argument 'alpha'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pymupdf\n",
+    "#==============================================================================\n",
+    "# create a fun-colored width * height PNG with pymupdf and numpy\n",
+    "#==============================================================================\n",
+    "height = 150\n",
+    "width  = 100\n",
+    "bild = np.ndarray((height, width, 3), dtype=np.uint8)\n",
+    "\n",
+    "for i in range(height):\n",
+    "    for j in range(width):\n",
+    "        # one pixel (some fun coloring)\n",
+    "        bild[i, j] = [(i+j)%256, i%256, j%256]\n",
+    "\n",
+    "samples = bytearray(bild.tostring())    # get plain pixel data from numpy array\n",
+    "pix = pymupdf.Pixmap(pymupdf.csRGB, width, height, samples, alpha=False)\n",
+    "pix.save(\"test.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "HTML = \"\"\"\n",
+    "<p style=\"font-family: sans-serif;color: blue\">Hello World!</p>\n",
+    "\"\"\"\n",
+    "\n",
+    "MEDIABOX = pymupdf.paper_rect(\"letter\")  # output page format: Letter\n",
+    "WHERE = MEDIABOX + (36, 36, -36, -36)  # leave borders of 0.5 inches\n",
+    "\n",
+    "story = pymupdf.Story(html=HTML)  # create story from HTML\n",
+    "writer = pymupdf.DocumentWriter(\"output.pdf\")  # create the writer\n",
+    "\n",
+    "more = 1  # will indicate end of input once it is set to 0\n",
+    "\n",
+    "while more:  # loop outputting the story\n",
+    "    device = writer.begin_page(MEDIABOX)  # make new page\n",
+    "    more, _ = story.place(WHERE)  # layout into allowed rectangle\n",
+    "    story.draw(device)  # write on page\n",
+    "    writer.end_page()  # finish page\n",
+    "\n",
+    "writer.close()  # close output file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "CSS = \"\"\"\n",
+    "body {\n",
+    "    font-family: sans-serif;\n",
+    "    color: blue;\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "HTML = \"\"\"\n",
+    "<p>Hello World!</p>\n",
+    "\"\"\"\n",
+    "\n",
+    "# the story would then be created like this:\n",
+    "story = pymupdf.Story(html=HTML, user_css=CSS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "No OCR support: TESSDATA_PREFIX not set",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 7\u001b[0m\n\u001b[0;32m      3\u001b[0m doc \u001b[38;5;241m=\u001b[39m pymupdf\u001b[38;5;241m.\u001b[39mopen(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC:/Users/sekhar/Downloads/Fillable-Form_CIOMS-to-E2B.pdf\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m page \u001b[38;5;241m=\u001b[39m doc[\u001b[38;5;241m1\u001b[39m]\n\u001b[1;32m----> 7\u001b[0m tp \u001b[38;5;241m=\u001b[39m \u001b[43mpage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_textpage_ocr\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(tp\u001b[38;5;241m.\u001b[39mextractText())\n",
+      "File \u001b[1;32mc:\\Users\\sekhar\\anaconda3\\envs\\p_310\\lib\\site-packages\\pymupdf\\utils.py:591\u001b[0m, in \u001b[0;36mget_textpage_ocr\u001b[1;34m(page, flags, language, dpi, full, tessdata)\u001b[0m\n\u001b[0;32m    589\u001b[0m pymupdf\u001b[38;5;241m.\u001b[39mCheckParent(page)\n\u001b[0;32m    590\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m TESSDATA_PREFIX \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m tessdata:\n\u001b[1;32m--> 591\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo OCR support: TESSDATA_PREFIX not set\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    593\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfull_ocr\u001b[39m(page, dpi, language, flags):\n\u001b[0;32m    594\u001b[0m     zoom \u001b[38;5;241m=\u001b[39m dpi \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m72\u001b[39m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: No OCR support: TESSDATA_PREFIX not set"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "doc = pymupdf.open('C:/Users/sekhar/Downloads/Fillable-Form_CIOMS-to-E2B.pdf')\n",
+    "\n",
+    "page = doc[1]\n",
+    "\n",
+    "tp = page.get_textpage_ocr()\n",
+    "\n",
+    "print(tp.extractText())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
