--- a/pdf_write.ipynb
+++ b/pdf_write.ipynb
@@ -260,7 +260,7 @@
     "                            field_value = field_data[field_name]  # Get the value from field_data\n",
     "                            widget.field_value = field_value  # Update the field value\n",
     "                            widget.update()  # Apply the update to the widget\n",
-    "                            print('*****',widget.field_type)\n",
+    "                            # print('*****',widget.field_type)\n",
     "                        elif widget.field_type == 2:\n",
     "                            print('checkbox')\n",
     "                            if field_value.lower() in [\"yes\", \"true\", \"1\"]:\n",
@@ -299,58 +299,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 *********************** SUSPECT ADVERSE REACTION REPORT\n",
-      "7\n",
-      "7 *********************** 1 PATIENT INITIALS first last\n",
-      "7 *********************** 1a COUNTRY\n",
-      "7\n",
-      "7 *********************** 2_DateOfBirth\n",
-      "7 *********************** 2a AGE Years\n",
-      "3 *********************** 3_Sex\n",
-      "3\n",
-      "7 *********************** 4_ReactionOnset\n",
-      "7 *********************** 7  13 DESCRIBE REACTIONS including relevant testslab data\n",
-      "7\n",
-      "2 *********************** PatientDied\n",
-      "2 *********************** InpatientHospitalisation\n",
-      "2 *********************** Persistence_Incapacity\n",
-      "2 *********************** LifeThreatening\n",
-      "7 *********************** 14_SuspectDrugs\n",
-      "7\n",
-      "5 *********************** 20\n",
-      "5 *********************** 20\n",
-      "5 *********************** 20\n",
-      "7 *********************** 15_DailyDoses\n",
-      "7\n",
-      "7 *********************** 16_RoutesOfAdmin\n",
-      "7\n",
-      "7 *********************** 17_IndicationsForUse\n",
-      "5 *********************** 21\n",
-      "5 *********************** 21\n",
-      "5 *********************** 21\n",
-      "7 *********************** 18_TherapyFrom\n",
-      "7 *********************** 18_TherapyTo\n",
-      "7 *********************** 19_TherapyDuration\n",
-      "7 *********************** 22 CONCOMITANT DRUGS AND DATES OF ADMINISTRATION exclude those used to treat reaction\n",
-      "7 *********************** 23 OTHER RELEVANT HISTORY eg diagnostics allergies pregnancy with last month of period etc\n",
-      "7 *********************** 24A_NameOfManufacturer\n",
-      "7 *********************** 24a  ADDRESS OF MANUFACTURER\n",
-      "7 *********************** 24b MFR CONTROL NO\n",
-      "7 *********************** 24_ManufacturerDetails\n",
-      "7 *********************** 24c DATE RECEIVED BY MANUFACTURER\n",
-      "7 *********************** DATE OF THIS REPORT\n",
-      "2 *********************** 24d_Study\n",
-      "2 *********************** 24d_HealthProfessional\n",
-      "2 *********************** 24d_Literature\n",
-      "5 *********************** 25\n",
-      "5 *********************** 25\n",
+      "SUSPECT ADVERSE REACTION REPORT\n",
+      "1 PATIENT INITIALS first last\n",
+      "1a COUNTRY\n",
+      "2_DateOfBirth\n",
+      "2a AGE Years\n",
+      "3_Sex\n",
+      "4_ReactionOnset\n",
+      "7  13 DESCRIBE REACTIONS including relevant testslab data\n",
+      "PatientDied\n",
+      "InpatientHospitalisation\n",
+      "Persistence_Incapacity\n",
+      "LifeThreatening\n",
+      "14_SuspectDrugs\n",
+      "20\n",
+      "20\n",
+      "20\n",
+      "15_DailyDoses\n",
+      "16_RoutesOfAdmin\n",
+      "17_IndicationsForUse\n",
+      "21\n",
+      "21\n",
+      "21\n",
+      "18_TherapyFrom\n",
+      "18_TherapyTo\n",
+      "19_TherapyDuration\n",
+      "22 CONCOMITANT DRUGS AND DATES OF ADMINISTRATION exclude those used to treat reaction\n",
+      "23 OTHER RELEVANT HISTORY eg diagnostics allergies pregnancy with last month of period etc\n",
+      "24A_NameOfManufacturer\n",
+      "24a  ADDRESS OF MANUFACTURER\n",
+      "24b MFR CONTROL NO\n",
+      "24_ManufacturerDetails\n",
+      "24c DATE RECEIVED BY MANUFACTURER\n",
+      "DATE OF THIS REPORT\n",
+      "24d_Study\n",
+      "24d_HealthProfessional\n",
+      "24d_Literature\n",
+      "25\n",
+      "25\n",
       "{2, 3, 5, 7}\n",
       "PDF saved to C:/Users/sekhar/Downloads/test2.pdf\n"
      ]
@@ -372,12 +365,12 @@
     "                types.add(widget.field_type)\n",
     "                if widget.field_type:  # Check if it's a fillable field\n",
     "                    field_name = widget.field_name\n",
-    "                    print(widget.field_type, '***********************' ,widget.field_name)\n",
+    "                    print(widget.field_name)\n",
     "                    if field_name in field_data:  # Check if the field name is in field_data\n",
     "                        field_value = field_data[field_name]  # Get the value from field_data\n",
     "                        if widget.field_type != 2:\n",
     "                            widget.field_value = field_value  # Update the field value\n",
-    "                            print(widget.field_type, )\n",
+    "                            # print(widget.field_type, )\n",
     "                        else:\n",
     "                            # Checkbox handling\n",
     "                            # print('*')\n",
@@ -416,6 +409,276 @@
     "    }\n",
     "    \n",
     "    fill_pdf_fields(pdf_path, output_path, field_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "a bytes-like object is required, not 'Page'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m img \u001b[38;5;241m=\u001b[39m pdf[\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnew_image.png\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m----> 8\u001b[0m     \u001b[43mf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msuceess\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     11\u001b[0m pdf\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[1;31mTypeError\u001b[0m: a bytes-like object is required, not 'Page'"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf \n",
+    "\n",
+    "pdf = pymupdf.open(r\"C:\\Users\\sekhar\\Downloads\\Fillable-Form_CIOMS-to-E2B.pdf\")\n",
+    "\n",
+    "img = pdf[1]\n",
+    "\n",
+    "with open('new_image.png', 'wb') as f:\n",
+    "    f.write(img)\n",
+    "    print('suceess')\n",
+    "\n",
+    "pdf.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Document' object has no attribute 'get_form'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m pdf_document \u001b[38;5;241m=\u001b[39m fitz\u001b[38;5;241m.\u001b[39mopen(pdf_path)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Get the form fields\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m form \u001b[38;5;241m=\u001b[39m \u001b[43mpdf_document\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_form\u001b[49m()\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Define values to fill\u001b[39;00m\n\u001b[0;32m     11\u001b[0m form_data \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1_PATIENT_INITIALS_first_last\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mJ.D.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m1a_COUNTRY\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUSA\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m24_ManufacturerDetails\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdditional details about manufacturer\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     32\u001b[0m }\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Document' object has no attribute 'get_form'"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz  # PyMuPDF\n",
+    "\n",
+    "# Open the PDF file\n",
+    "pdf_path = r\"C:\\Users\\sekhar\\Downloads\\Fillable-Form_CIOMS-to-E2B.pdf\"\n",
+    "pdf_document = fitz.open(pdf_path)\n",
+    "\n",
+    "# Get the form fields\n",
+    "form = pdf_document.get_form()\n",
+    "\n",
+    "# Define values to fill\n",
+    "form_data = {\n",
+    "    \"1_PATIENT_INITIALS_first_last\": \"J.D.\",\n",
+    "    \"1a_COUNTRY\": \"USA\",\n",
+    "    \"2a_AGE_Years\": \"30\",\n",
+    "    \"7_DESCRIBE_REACTIONS\": \"Nausea, headache\",\n",
+    "    \"22_CONCOMITANT_DRUGS_AND_DATES_OF_ADMINISTRATION\": \"Drug A: 01/01/2021 - 01/31/2021\",\n",
+    "    \"23_OTHER_RELEVANT_HISTORY\": \"No known allergies.\",\n",
+    "    \"24c_DATE_RECEIVED_BY_MANUFACTURER\": \"01/01/2024\",\n",
+    "    \"DATE_OF_THIS_REPORT\": \"01/02/2024\",\n",
+    "    \"14_SuspectDrugs\": \"Drug B\",\n",
+    "    \"15_DailyDoses\": \"50mg\",\n",
+    "    \"16_RoutesOfAdmin\": \"Oral\",\n",
+    "    \"2_DateOfBirth\": \"01/01/1994\",\n",
+    "    \"17_IndicationsForUse\": \"Treatment of condition X\",\n",
+    "    \"18_TherapyFrom\": \"01/01/2024\",\n",
+    "    \"18_TherapyTo\": \"01/31/2024\",\n",
+    "    \"19_TherapyDuration\": \"30 days\",\n",
+    "    \"24b_MFR_CONTROL_NO\": \"123456\",\n",
+    "    \"24a_ADDRESS_OF_MANUFACTURER\": \"123 Pharma St, Pharma City, PC 12345\",\n",
+    "    \"24A_NameOfManufacturer\": \"Pharma Inc.\",\n",
+    "    \"24_ManufacturerDetails\": \"Additional details about manufacturer\"\n",
+    "}\n",
+    "\n",
+    "checkbox_fields = {\n",
+    "    \"PatientDied\": True,\n",
+    "    \"InpatientHospitalisation\": False,\n",
+    "    \"Persistence_Incapacity\": True,\n",
+    "    \"LifeThreatening\": False,\n",
+    "    \"20\": True,\n",
+    "    \"21\": False,\n",
+    "    \"24d_Study\": True,\n",
+    "    \"24d_Literature\": False,\n",
+    "    \"24d_HealthProfessional\": True,\n",
+    "    \"25\": True  # Added the missing checkbox field 25\n",
+    "}\n",
+    "\n",
+    "# Fill the form fields\n",
+    "for field_name, value in form_data.items():\n",
+    "    form.fill_text(field_name, value)\n",
+    "\n",
+    "# Set checkbox fields\n",
+    "for field_name, value in checkbox_fields.items():\n",
+    "    form.fill_checkbox(field_name, value)\n",
+    "\n",
+    "# Save the updated PDF\n",
+    "output_path = 'Updated_Fillable-Form_CIOMS-to-E2B.pdf'\n",
+    "pdf_document.save(output_path)\n",
+    "\n",
+    "# Close the document\n",
+    "pdf_document.close()\n",
+    "\n",
+    "print(f'Successfully saved updated PDF to {output_path}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully saved updated PDF to Updated_Fillable-Form_CIOMS-to-E2B.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz  # PyMuPDF\n",
+    "\n",
+    "# Open the PDF file\n",
+    "pdf_path = r\"C:\\Users\\sekhar\\Downloads\\Fillable-Form_CIOMS-to-E2B.pdf\"\n",
+    "pdf_document = fitz.open(pdf_path)\n",
+    "\n",
+    "# Define values to fill\n",
+    "form_data = {\n",
+    "    \"1_PATIENT_INITIALS_first_last\": \"J.D.\",\n",
+    "    \"1a_COUNTRY\": \"USA\",\n",
+    "    \"2a_AGE_Years\": \"30\",\n",
+    "    \"7_DESCRIBE_REACTIONS\": \"Nausea, headache\",\n",
+    "    \"22_CONCOMITANT_DRUGS_AND_DATES_OF_ADMINISTRATION\": \"Drug A: 01/01/2021 - 01/31/2021\",\n",
+    "    \"23_OTHER_RELEVANT_HISTORY\": \"No known allergies.\",\n",
+    "    \"24c_DATE_RECEIVED_BY_MANUFACTURER\": \"01/01/2024\",\n",
+    "    \"DATE_OF_THIS_REPORT\": \"01/02/2024\",\n",
+    "    \"14_SuspectDrugs\": \"Drug B\",\n",
+    "    \"15_DailyDoses\": \"50mg\",\n",
+    "    \"16_RoutesOfAdmin\": \"Oral\",\n",
+    "    \"2_DateOfBirth\": \"01/01/1994\",\n",
+    "    \"17_IndicationsForUse\": \"Treatment of condition X\",\n",
+    "    \"18_TherapyFrom\": \"01/01/2024\",\n",
+    "    \"18_TherapyTo\": \"01/31/2024\",\n",
+    "    \"19_TherapyDuration\": \"30 days\",\n",
+    "    \"24b_MFR_CONTROL_NO\": \"123456\",\n",
+    "    \"24a_ADDRESS_OF_MANUFACTURER\": \"123 Pharma St, Pharma City, PC 12345\",\n",
+    "    \"24A_NameOfManufacturer\": \"Pharma Inc.\",\n",
+    "    \"24_ManufacturerDetails\": \"Additional details about manufacturer\"\n",
+    "}\n",
+    "\n",
+    "checkbox_fields = {\n",
+    "    \"PatientDied\": True,\n",
+    "    \"InpatientHospitalisation\": False,\n",
+    "    \"Persistence_Incapacity\": True,\n",
+    "    \"LifeThreatening\": False,\n",
+    "    \"20\": True,\n",
+    "    \"21\": False,\n",
+    "    \"24d_Study\": True,\n",
+    "    \"24d_Literature\": False,\n",
+    "    \"24d_HealthProfessional\": True,\n",
+    "    \"25\": True  # Added the missing checkbox field 25\n",
+    "}\n",
+    "\n",
+    "# Iterate through each page to find and fill form fields\n",
+    "for page in pdf_document:\n",
+    "    for field in page.widgets():\n",
+    "        field_name = field.field_name\n",
+    "        if field_name in form_data:\n",
+    "            field.field_value = form_data[field_name]\n",
+    "        elif field_name in checkbox_fields:\n",
+    "            field.field_value = \"Yes\" if checkbox_fields[field_name] else \"Off\"\n",
+    "\n",
+    "# Save the updated PDF\n",
+    "output_path = 'Updated_Fillable-Form_CIOMS-to-E2B.pdf'\n",
+    "pdf_document.save(output_path)\n",
+    "\n",
+    "# Close the document\n",
+    "pdf_document.close()\n",
+    "\n",
+    "print(f'Successfully saved updated PDF to {output_path}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Widget' object has no attribute 'set_text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 50\u001b[0m\n\u001b[0;32m     48\u001b[0m field_name \u001b[38;5;241m=\u001b[39m field\u001b[38;5;241m.\u001b[39mfield_name\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m field_name \u001b[38;5;129;01min\u001b[39;00m form_data:\n\u001b[1;32m---> 50\u001b[0m     \u001b[43mfield\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_text\u001b[49m(form_data[field_name])\n\u001b[0;32m     51\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m field_name \u001b[38;5;129;01min\u001b[39;00m checkbox_fields:\n\u001b[0;32m     52\u001b[0m     field\u001b[38;5;241m.\u001b[39mset_button_value(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYes\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m checkbox_fields[field_name] \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOff\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Widget' object has no attribute 'set_text'"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz  # PyMuPDF\n",
+    "\n",
+    "# Open the PDF file\n",
+    "pdf_path = r\"C:\\Users\\sekhar\\Downloads\\Fillable-Form_CIOMS-to-E2B.pdf\"\n",
+    "pdf_document = fitz.open(pdf_path)\n",
+    "\n",
+    "# Define values to fill\n",
+    "form_data = {\n",
+    "    \"1_PATIENT_INITIALS_first_last\": \"J.D.\",\n",
+    "    \"1a_COUNTRY\": \"USA\",\n",
+    "    \"2a_AGE_Years\": \"30\",\n",
+    "    \"7_DESCRIBE_REACTIONS\": \"Nausea, headache\",\n",
+    "    \"22_CONCOMITANT_DRUGS_AND_DATES_OF_ADMINISTRATION\": \"Drug A: 01/01/2021 - 01/31/2021\",\n",
+    "    \"23_OTHER_RELEVANT_HISTORY\": \"No known allergies.\",\n",
+    "    \"24c_DATE_RECEIVED_BY_MANUFACTURER\": \"01/01/2024\",\n",
+    "    \"DATE_OF_THIS_REPORT\": \"01/02/2024\",\n",
+    "    \"14_SuspectDrugs\": \"Drug B\",\n",
+    "    \"15_DailyDoses\": \"50mg\",\n",
+    "    \"16_RoutesOfAdmin\": \"Oral\",\n",
+    "    \"2_DateOfBirth\": \"01/01/1994\",\n",
+    "    \"17_IndicationsForUse\": \"Treatment of condition X\",\n",
+    "    \"18_TherapyFrom\": \"01/01/2024\",\n",
+    "    \"18_TherapyTo\": \"01/31/2024\",\n",
+    "    \"19_TherapyDuration\": \"30 days\",\n",
+    "    \"24b_MFR_CONTROL_NO\": \"123456\",\n",
+    "    \"24a_ADDRESS_OF_MANUFACTURER\": \"123 Pharma St, Pharma City, PC 12345\",\n",
+    "    \"24A_NameOfManufacturer\": \"Pharma Inc.\",\n",
+    "    \"24_ManufacturerDetails\": \"Additional details about manufacturer\"\n",
+    "}\n",
+    "\n",
+    "checkbox_fields = {\n",
+    "    \"PatientDied\": True,\n",
+    "    \"InpatientHospitalisation\": False,\n",
+    "    \"Persistence_Incapacity\": True,\n",
+    "    \"LifeThreatening\": False,\n",
+    "    \"20\": True,\n",
+    "    \"21\": False,\n",
+    "    \"24d_Study\": True,\n",
+    "    \"24d_Literature\": False,\n",
+    "    \"24d_HealthProfessional\": True,\n",
+    "    \"25\": True  # Added the missing checkbox field 25\n",
+    "}\n",
+    "\n",
+    "# Iterate through each page to find and fill form fields\n",
+    "for page_num in range(len(pdf_document)):\n",
+    "    page = pdf_document[page_num]\n",
+    "    for field in page.widgets():\n",
+    "        field_name = field.field_name\n",
+    "        if field_name in form_data:\n",
+    "            field.set_text(form_data[field_name])\n",
+    "        elif field_name in checkbox_fields:\n",
+    "            field.set_button_value(\"Yes\" if checkbox_fields[field_name] else \"Off\")\n",
+    "\n",
+    "# Save the updated PDF\n",
+    "output_path = 'Updated_Fillable-Form_CIOMS-to-E2B_2.pdf'\n",
+    "pdf_document.save(output_path)\n",
+    "\n",
+    "# Close the document\n",
+    "pdf_document.close()\n",
+    "\n",
+    "print(f'Successfully saved updated PDF to {output_path}')\n"
    ]
   },
   {
