--- a/pdf_write.ipynb
+++ b/pdf_write.ipynb
@@ -299,60 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7 *********************** SUSPECT ADVERSE REACTION REPORT\n",
-      "7\n",
-      "7 *********************** 1 PATIENT INITIALS first last\n",
-      "7 *********************** 1a COUNTRY\n",
-      "7\n",
-      "7 *********************** 2_DateOfBirth\n",
-      "7 *********************** 2a AGE Years\n",
-      "3 *********************** 3_Sex\n",
-      "3\n",
-      "7 *********************** 4_ReactionOnset\n",
-      "7 *********************** 7  13 DESCRIBE REACTIONS including relevant testslab data\n",
-      "7\n",
-      "2 *********************** PatientDied\n",
-      "2 *********************** InpatientHospitalisation\n",
-      "2 *********************** Persistence_Incapacity\n",
-      "2 *********************** LifeThreatening\n",
-      "7 *********************** 14_SuspectDrugs\n",
-      "7\n",
-      "5 *********************** 20\n",
-      "5 *********************** 20\n",
-      "5 *********************** 20\n",
-      "7 *********************** 15_DailyDoses\n",
-      "7\n",
-      "7 *********************** 16_RoutesOfAdmin\n",
-      "7\n",
-      "7 *********************** 17_IndicationsForUse\n",
-      "5 *********************** 21\n",
-      "5 *********************** 21\n",
-      "5 *********************** 21\n",
-      "7 *********************** 18_TherapyFrom\n",
-      "7 *********************** 18_TherapyTo\n",
-      "7 *********************** 19_TherapyDuration\n",
-      "7 *********************** 22 CONCOMITANT DRUGS AND DATES OF ADMINISTRATION exclude those used to treat reaction\n",
-      "7 *********************** 23 OTHER RELEVANT HISTORY eg diagnostics allergies pregnancy with last month of period etc\n",
-      "7 *********************** 24A_NameOfManufacturer\n",
-      "7 *********************** 24a  ADDRESS OF MANUFACTURER\n",
-      "7 *********************** 24b MFR CONTROL NO\n",
-      "7 *********************** 24_ManufacturerDetails\n",
-      "7 *********************** 24c DATE RECEIVED BY MANUFACTURER\n",
-      "7 *********************** DATE OF THIS REPORT\n",
-      "2 *********************** 24d_Study\n",
-      "2 *********************** 24d_HealthProfessional\n",
-      "2 *********************** 24d_Literature\n",
-      "5 *********************** 25\n",
-      "5 *********************** 25\n",
+      "1a 2 *********************** PatientDied ############## \n",
+      "1b 2 *********************** PatientDied ############## Yes\n",
+      "1a 2 *********************** InpatientHospitalisation ############## \n",
+      "1b 2 *********************** InpatientHospitalisation ############## Yes\n",
+      "1a 2 *********************** Persistence_Incapacity ############## \n",
+      "1b 2 *********************** Persistence_Incapacity ############## Yes\n",
+      "1a 2 *********************** LifeThreatening ############## \n",
+      "1b 2 *********************** LifeThreatening ############## Yes\n",
       "{2, 3, 5, 7}\n",
-      "PDF saved to C:/Users/sekhar/Downloads/test2.pdf\n"
+      "PDF saved to D:\\Sekhar\\test3.pdf\n"
      ]
     }
    ],
@@ -372,19 +335,21 @@
     "                types.add(widget.field_type)\n",
     "                if widget.field_type:  # Check if it's a fillable field\n",
     "                    field_name = widget.field_name\n",
-    "                    print(widget.field_type, '***********************' ,widget.field_name)\n",
+    "                    # print(widget.field_type, '***********************' ,widget.field_name)\n",
     "                    if field_name in field_data:  # Check if the field name is in field_data\n",
     "                        field_value = field_data[field_name]  # Get the value from field_data\n",
     "                        if widget.field_type != 2:\n",
     "                            widget.field_value = field_value  # Update the field value\n",
-    "                            print(widget.field_type, )\n",
+    "                            # print(widget.field_type, )\n",
     "                        else:\n",
     "                            # Checkbox handling\n",
     "                            # print('*')\n",
     "                            # print(widget.field_value)\n",
     "                            # print('*')\n",
     "                            if field_value.lower() in [\"yes\", \"true\", \"1\"]:\n",
-    "                                widget.field_value = '1'  # Check the checkbox\n",
+    "                                print('1a', widget.field_type, '***********************' ,widget.field_name, '##############', widget.field_value)\n",
+    "                                widget.field_value = widget.on_state()  # Check the checkbox\n",
+    "                                print('1b', widget.field_type, '***********************' ,widget.field_name, '##############', widget.field_value)\n",
     "                            else:\n",
     "                                widget.field_value = '0'  # Uncheck the checkbox\n",
     "                        # print(widget.field_name, widget.field_value)\n",
@@ -398,18 +363,18 @@
     "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
-    "    pdf_path = \"C:/Users/sekhar/Downloads/Fillable-Form_CIOMS-to-E2B.pdf\"\n",
-    "    output_path = \"C:/Users/sekhar/Downloads/test2.pdf\"\n",
+    "    pdf_path = r\"D:\\Sekhar\\Fillable-Form_CIOMS-to-E2B.pdf\"\n",
+    "    output_path = r\"D:\\Sekhar\\test3.pdf\"\n",
     "\n",
     "    field_data = {\n",
-    "        \"SUSPECT ADVERSE REACTION REPORT\": \"Adverse Reaction Report by raja sekhar\",\n",
+    "        \"SUSPECT ADVERSE REACTION REPORT\": \"Adverse Reaction Report of Mushroom Solutions\",\n",
     "        \"1a COUNTRY\": 'INDIA',\n",
     "        \"7  13 DESCRIBE REACTIONS including relevant testslab data\": \"Patient experienced severe headache and nausea.\",\n",
     "        \"PatientDied\": \"yes\",\n",
     "        \"3_Sex\": \"Male\",\n",
     "        \"InpatientHospitalisation\": \"yes\",\n",
     "        \"Persistence_Incapacity\": \"yes\",\n",
-    "        \"LifeThreatening\": \"No\",\n",
+    "        \"LifeThreatening\": \"yes\",\n",
     "        \"14_SuspectDrugs\": \"Drug A\",\n",
     "        \"15_DailyDoses\": \"2 times a day\",\n",
     "        \"16_RoutesOfAdmin\": \"Oral\",\n",
