--- a/pdf_write.ipynb
+++ b/pdf_write.ipynb
@@ -37,7 +37,7 @@
     "                    if field_name in field_data:\n",
     "                        print(field_name)\n",
     "                        annot.update({\n",
-    "                            NameObject(\"/V\"): TextStringObject(field_data[field_name])\n",
+    "                            # NameObject(\"/V\"): TextStringObject(field_data[field_name])\n",
     "                        })\n",
     "\n",
     "            # Add the page to the PDF writer\n",
