'laptop-21-6-24-8-29__pymupdf_part_1'

--- a/Working with PDF/pymupdf.ipynb
+++ b/Working with PDF/pymupdf.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Working with pdf's and all other type of files like PDF, Doc, Images, etc"
+    "# Working with pdf's and all other type of files like PDF, Doc, Images, etc"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Installing the PyMuPDF module\n",
+    "### Installing the PyMuPDF module\n",
     "\n",
     "        pip install PyMuPDF"
    ]
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "importing the module"
+    "### importing the module"
    ]
   },
   {
@@ -36,18 +36,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opening the File"
+    "### Opening the File"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pymupdf\n",
     "\n",
-    "pdf = pymupdf.open('example.pdf')"
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Some Document Methods\n",
+    "\n",
+    "### Method / Attribute \n",
+    "\n",
+    "    Document.page_count     the number of pages (int)\n",
+    "    Document.metadata       the metadata (dict)\n",
+    "    Document.get_toc()      get the table of content (list)\n",
+    "    Document.load_page()    read a Page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'format': 'PDF 1.3', 'title': '', 'author': '', 'subject': '', 'keywords': '', 'creator': '', 'producer': 'PyFPDF 1.7.2 http://pyfpdf.googlecode.com/', 'creationDate': 'D:20240612210545', 'modDate': '', 'trapped': '', 'encryption': None}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n",
+    "print(pdf.metadata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n",
+    "print(pdf.page_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n",
+    "# getting the table of contents\n",
+    "print(pdf.get_toc())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page 0 of example.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n",
+    "# loading the page\n",
+    "print(pdf.load_page(0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ways to load a page from the document\n",
+    "\n",
+    "    page numbers are similar to python list indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "page 0 of example.pdf\n",
+      "page 0 of example.pdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymupdf\n",
+    "\n",
+    "pdf = pymupdf.open('example.pdf')\n",
+    "\n",
+    "p1 = pdf.load_page(0)\n",
+    "\n",
+    "p2 = pdf[0]\n",
+    "\n",
+    "print(p1)\n",
+    "print(p2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        for page in doc:\n",
+    "        # do something with 'page'\n",
+    "\n",
+    "# ... or read backwards\n",
+    "        for page in reversed(doc):\n",
+    "        # do something with 'page'\n",
+    "\n",
+    "# ... or even use 'slicing'\n",
+    "        for page in doc.pages(start, stop, step):\n",
+    "        # do something with 'page'"
    ]
   },
   {
@@ -246,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How to Extract Text from within a Rectangle"
+    "# How to Extract Text from within a Rectangle"
    ]
   },
   {
@@ -322,10 +475,194 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Inspecting the Links, Annotations or Form Fields of a Page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### get all links on a page\n",
+    "links = page.get_links()\n",
+    "\n",
+    "for link in page.links():\n",
+    "    \n",
+    "        do something with 'link'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If dealing with a PDF document page, there may also exist annotations (Annot) or form fields (Widget), each of which have their own iterators:\n",
+    "\n",
+    "for annot in page.annots():\n",
+    "    \n",
+    "        # do something with 'annot'\n",
+    "\n",
+    "\n",
+    "for field in page.widgets():\n",
+    "    \n",
+    "        # do something with 'field'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rendering a Page\n",
+    "### This example creates a raster image of a page’s content:\n",
+    "\n",
+    "pix = page.get_pixmap()\n",
+    "\n",
+    "pix is a Pixmap object which (in this case) contains an RGB image of the page, ready to be used for many purposes. Method Page.get_pixmap() offers lots of variations for controlling the image: resolution / DPI, colorspace (e.g. to produce a grayscale image or an image with a subtractive color scheme), transparency, rotation, mirroring, shifting, shearing, etc. For example: to create an RGBA image (i.e. containing an alpha channel), specify pix = page.get_pixmap(alpha=True).\n",
+    "\n",
+    "A Pixmap contains a number of methods and attributes which are referenced below. Among them are the integers width, height (each in pixels) and stride (number of bytes of one horizontal image line). Attribute samples represents a rectangular area of bytes representing the image data (a Python bytes object).\n",
+    "\n",
+    "\n",
+    "### Note\n",
+    "You can also create a vector image of a page by using Page.get_svg_image(). Refer to this Vector Image Support page for details.\n",
+    "\n",
+    "## Saving the Page Image in a File\n",
+    "we can simply store the image in a PNG file:\n",
+    "\n",
+    "    pix.save('page-%i.png' % page.number)\n",
+    "\n",
+    "\n",
+    "from PIL import Image, ImageTk\n",
+    "\n",
+    "# set the mode depending on alpha\n",
+    "mode = \"RGBA\" if pix.alpha else \"RGB\"\n",
+    "img = Image.frombytes(mode, [pix.width, pix.height], pix.samples)\n",
+    "tkimg = ImageTk.PhotoImage(img)\n",
+    "\n",
+    "# The following avoids using Pillow:\n",
+    "\n",
+    "# remove alpha if present\n",
+    "pix1 = pymupdf.Pixmap(pix, 0) if pix.alpha else pix  # PPM does not support transparency\n",
+    "imgdata = pix1.tobytes(\"ppm\")  # extremely fast!\n",
+    "tkimg = tkinter.PhotoImage(data = imgdata)\n",
+    "\n",
+    "\n",
+    "Extracting Text and Images\n",
+    "We can also extract all text, images and other information of a page in many different forms, and levels of detail:\n",
+    "\n",
+    "text = page.get_text(opt)\n",
+    "Use one of the following strings for opt to obtain different formats [2]:\n",
+    "\n",
+    "“text”: (default) plain text with line breaks. No formatting, no text position details, no images.\n",
+    "\n",
+    "“blocks”: generate a list of text blocks (= paragraphs).\n",
+    "\n",
+    "“words”: generate a list of words (strings not containing spaces).\n",
+    "\n",
+    "“html”: creates a full visual version of the page including any images. This can be displayed with your internet browser.\n",
+    "\n",
+    "“dict” / “json”: same information level as HTML, but provided as a Python dictionary or resp. JSON string. See TextPage.extractDICT() for details of its structure.\n",
+    "\n",
+    "“rawdict” / “rawjson”: a super-set of “dict” / “json”. It additionally provides character detail information like XML. See TextPage.extractRAWDICT() for details of its structure.\n",
+    "\n",
+    "“xhtml”: text information level as the TEXT version but includes images. Can also be displayed by internet browsers.\n",
+    "\n",
+    "“xml”: contains no images, but full position and font information down to each single text character. Use an XML module to interpret.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Searching for Text\n",
+    "You can find out, exactly where on a page a certain text string appears:\n",
+    "\n",
+    "    areas = page.search_for(\"mupdf\")\n",
+    "\n",
+    "This delivers a list of rectangles (see Rect), each of which surrounds one occurrence of the string “mupdf” (case insensitive). You could use this information to e.g. highlight those areas (PDF only) or create a cross reference of the document.\n",
+    "\n",
+    "# PDF Maintenance\n",
+    "PDFs are the only document type that can be modified using PyMuPDF. Other file types are read-only.\n",
+    "\n",
+    "However, you can convert any document (including images) to a PDF and then apply all PyMuPDF features to the conversion result.\n",
+    "\n",
+    "\n",
+    "Find out more here Document.convert_to_pdf(), and also look at the demo script pdf-converter.py which can convert any supported document to PDF.\n",
+    "\n",
+    "Document.save() always stores a PDF in its current (potentially modified) state on disk.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modifying, Creating, Re-arranging and Deleting Pages\n",
+    "\n",
+    "There are several ways to manipulate the so-called page tree (a structure describing all the pages) of a PDF:\n",
+    "\n",
+    "Document.delete_page() and Document.delete_pages() delete pages.\n",
+    "\n",
+    "Document.copy_page(), Document.fullcopy_page() and Document.move_page() copy or move a page to other locations within the same document.\n",
+    "\n",
+    "\n",
+    "Document.select() shrinks a PDF down to selected pages. Parameter is a sequence [3] of the page numbers that you want to keep. These integers must all be in range 0 <= i < page_count. When executed, all pages missing in this list will be deleted. Remaining pages will occur in the sequence and as many times (!) as you specify them.\n",
+    "\n",
+    "So you can easily create new PDFs with\n",
+    "\n",
+    "the first or last 10 pages,\n",
+    "\n",
+    "only the odd or only the even pages (for doing double-sided printing),\n",
+    "\n",
+    "pages that do or don’t contain a given text,\n",
+    "\n",
+    "reverse the page sequence, …\n",
+    "\n",
+    "… whatever you can think of.\n",
+    "\n",
+    "The saved new document will contain links, annotations and bookmarks that are still valid (i.a.w. either pointing to a selected page or to some external resource).\n",
+    "\n",
+    "Document.insert_page() and Document.new_page() insert new pages.\n",
+    "\n",
+    "Pages themselves can moreover be modified by a range of methods (e.g. page rotation, annotation and link maintenance, text and image insertion)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# joining and Splitting PDF Documents\n",
+    "Method Document.insert_pdf() copies pages between different PDF documents. Here is a simple joiner example (doc1 and doc2 being opened PDFs):\n",
+    "\n",
+    "### append complete doc2 to the end of doc1\n",
+    "\n",
+    "    doc1.insert_pdf(doc2)\n",
+    "\n",
+    "Here is a snippet that splits doc1. It creates a new document of its first and its last 10 pages:\n",
+    "\n",
+    "    doc2 = pymupdf.open()                 # new empty PDF\n",
+    "    doc2.insert_pdf(doc1, to_page = 9)  # first 10 pages\n",
+    "    doc2.insert_pdf(doc1, from_page = len(doc1) - 10) # last 10 pages\n",
+    "    doc2.save(\"first-and-last-10.pdf\")\n",
+    "\n",
+    "\n",
+    "# Saving\n",
+    "As mentioned above, Document.save() will always save the document in its current state.\n",
+    "\n",
+    "You can write changes back to the original PDF by specifying option incremental=True. This process is (usually) extremely fast, since changes are appended to the original file without completely rewriting it.\n",
+    "\n",
+    "Document.save() options correspond to options of MuPDF’s command line utility mutool clean, see the following table.\n",
+    "\n",
+    "\n",
+    "# Closing\n",
+    "It is often desirable to “close” a document to relinquish control of the underlying file to the OS, while your program continues.\n",
+    "\n",
+    "This can be achieved by the Document.close() method. Apart from closing the underlying file, buffer areas associated with the document will be freed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
