'added_code_pdf_processing_widgets'

--- a/video processing/introduction-cv2.ipynb
+++ b/video processing/introduction-cv2.ipynb
@@ -210,17 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error opening video file\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# importing libraries \n",
     "import cv2 \n",
@@ -265,6 +257,130 @@
     "\n",
     "    # Closes all the frames \n",
     "    cv2.destroyAllWindows() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'get', 'getBackendName', 'getExceptionMode', 'grab', 'isOpened', 'open', 'read', 'release', 'retrieve', 'set', 'setExceptionMode', 'waitAny']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# importing libraries \n",
+    "import cv2 \n",
+    "import numpy as np \n",
+    "\n",
+    "\n",
+    "# Create a VideoCapture object and read from input file \n",
+    "cap = cv2.VideoCapture(\"AMBAR SE TODA Full Video Song (Hindi) [4K] _ RRR _ NTR,Ram Charan _ M M Keeravaani _ SS Rajamouli.mp4\") \n",
+    "\n",
+    "# try:\n",
+    "\t\n",
+    "#     # Check if camera opened successfully \n",
+    "#     if (cap.isOpened()== False): \n",
+    "#         print(\"Error opening video file\") \n",
+    "\n",
+    "#     # Read until video is completed \n",
+    "#     while(cap.isOpened()): \n",
+    "        \n",
+    "#     # Capture frame-by-frame \n",
+    "#         ret, frame = cap.read() \n",
+    "#         if ret == True: \n",
+    "#         # Display the resulting frame \n",
+    "#             cv2.imshow('Frame', frame) \n",
+    "            \n",
+    "#         # Press Q on keyboard to exit \n",
+    "#             if cv2.waitKey(25) & 0xFF == ord('q'): \n",
+    "#                 break\n",
+    "\n",
+    "#     # Break the loop \n",
+    "#         else: \n",
+    "#             break\n",
+    "\n",
+    "#     # When everything done, release \n",
+    "#     # the video capture object \n",
+    "#     cap.release() \n",
+    "\n",
+    "#     # Closes all the frames \n",
+    "#     cv2.destroyAllWindows() \n",
+    "# except:\n",
+    "#     # the video capture object \n",
+    "#     cap.release() \n",
+    "\n",
+    "#     # Closes all the frames \n",
+    "#     cv2.destroyAllWindows() \n",
+    "\n",
+    "print(dir(cap))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cap.release()\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on built-in function get:\n",
+      "\n",
+      "get(...) method of cv2.VideoCapture instance\n",
+      "    get(propId) -> retval\n",
+      "    .   @brief Returns the specified VideoCapture property\n",
+      "    .   \n",
+      "    .       @param propId Property identifier from cv::VideoCaptureProperties (eg. cv::CAP_PROP_POS_MSEC, cv::CAP_PROP_POS_FRAMES, ...)\n",
+      "    .       or one from @ref videoio_flags_others\n",
+      "    .       @return Value for the specified property. Value 0 is returned when querying a property that is\n",
+      "    .       not supported by the backend used by the VideoCapture instance.\n",
+      "    .   \n",
+      "    .       @note Reading / writing properties involves many layers. Some unexpected result might happens\n",
+      "    .       along this chain.\n",
+      "    .       @code{.txt}\n",
+      "    .       VideoCapture -> API Backend -> Operating System -> Device Driver -> Device Hardware\n",
+      "    .       @endcode\n",
+      "    .       The returned value might be different from what really used by the device or it could be encoded\n",
+      "    .       using device dependent rules (eg. steps or percentage). Effective behaviour depends from device\n",
+      "    .       driver and API Backend\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(cap.get)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FFMPEG\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cap.getBackendName())"
    ]
   },
   {
